--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Riz Architect
+author: Riz User
+email: riz@riz.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is how we do it here on the west side of eastern province
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+twitter_username: riz@witter-handle
+github_username:  riz@github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
