--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: "Riz AI Blog"
+date: 2019-04-25
+
+title: "Riz AI Blog"
+author: Riz
+email: Riz@riz.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Watch the space, coming to a virtual place near you
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+twitter_username: Riz@twitter-handle
+github_username:  Riz@github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
